@@ -3,6 +3,7 @@ Version - 2.5 -
 -Added some safety checks to degradeTree
 -Added function equation2function which converts a character string containing the right-hand side of a single-line equation (like from class formula) to an R function with arguments corresponding the parameters in the input equation.
 -Added handling for ambiguous and polymorphic characters to minCharChange, AncPropStateMat and resolveTreeChar by adding support for these options as they already existed in phangorn
+-Altered function parentChild2TaxonTree to handle datasets where root-ancestor was indicated with an NA value
 -
 
 Version - 2.4 - 05-01-15
